--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./styles.css">
         <title>Administracion</title>
     </head>
     <body>
@@ -30,6 +31,7 @@
                 <input type="number" name="stock" id="stock" step="1" required placeholder="Stock">
             </div>
             <input type="submit" value="Guardar">
-        </form>        
+        </form>
+        <script src="./index.js"></script>
     </body>
 </html>
